--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "tailwind-schemes",
-  "version": "1.6.0",
+  "version": "1.6.1",
   "author": "onepercman",
+  "description": "A TailwindCSS plugin for dynamic multi-theme color schemes, enabling easy customization and switching between themes like light and dark mode.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "license": "MIT",
@@ -15,6 +16,20 @@
   "bugs": {
     "url": "https://github.com/onepercman/tailwind-schemes/issues"
   },
+  "homepage": "https://github.com/onepercman/tailwind-schemes",
+  "keywords": [
+    "tailwind",
+    "tailwindcss",
+    "plugin",
+    "theme",
+    "multi-theme",
+    "dynamic-color",
+    "dark-mode",
+    "light-mode",
+    "tailwindcss-plugin",
+    "CSS",
+    "custom-themes"
+  ],
   "scripts": {
     "test": "jest",
     "swcify": "swc ./src/index.ts --out-dir ./dist",
