--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "tailwind-schemes",
-  "version": "1.6.1",
+  "version": "1.6.5",
   "author": "onepercman",
   "description": "A TailwindCSS plugin for dynamic multi-theme color schemes, enabling easy customization and switching between themes like light and dark mode.",
-  "main": "dist/index.js",
+  "main": "dist/src/index.js",
   "types": "dist/index.d.ts",
   "license": "MIT",
   "publishConfig": {
@@ -32,7 +32,7 @@
   ],
   "scripts": {
     "test": "jest",
-    "swcify": "swc ./src/index.ts --out-dir ./dist",
+    "swcify": "swc src -d ./dist",
     "build": "npm run swcify",
     "dev": "npm run swcify -- --watch",
     "postbuild": "tsc --emitDeclarationOnly",
@@ -64,14 +64,14 @@
     "tailwindcss": ">=3.2.0"
   },
   "devDependencies": {
-    "@swc/cli": "^0.1.57",
-    "@swc/core": "^1.3.7",
-    "@swc/jest": "^0.2.23",
-    "@types/jest": "^29.1.2",
-    "jest": "^29.1.2",
-    "postcss": "^8.4.17",
-    "prettier": "^2.7.1",
-    "tailwindcss": "0.0.0-insiders.7385373",
-    "typescript": "^4.8.4"
+    "@swc/cli": "0.4.1-nightly.20240914",
+    "@swc/core": "^1.7.39",
+    "@swc/jest": "^0.2.36",
+    "@types/jest": "^29.5.14",
+    "jest": "^29.7.0",
+    "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
+    "tailwindcss": "3.4.14",
+    "typescript": "^5.6.3"
   }
 }
