--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "tailwind-schemes",
-  "version": "1.6.5",
+  "version": "1.6.6",
   "author": "onepercman",
   "description": "A TailwindCSS plugin for dynamic multi-theme color schemes, enabling easy customization and switching between themes like light and dark mode.",
-  "main": "dist/src/index.js",
+  "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "license": "MIT",
   "publishConfig": {
@@ -31,31 +31,16 @@
     "custom-themes"
   ],
   "scripts": {
+    "build": "tsup",
+    "dev": "tsup --watch",
     "test": "jest",
-    "swcify": "swc src -d ./dist",
-    "build": "npm run swcify",
-    "dev": "npm run swcify -- --watch",
-    "postbuild": "tsc --emitDeclarationOnly",
-    "prepublishOnly": "npm run build",
-    "release-channel": "node ./scripts/release-channel.js",
-    "release-notes": "node ./scripts/release-notes.js"
+    "prepublishOnly": "npm run build"
   },
   "prettier": {
     "printWidth": 100,
     "semi": false,
     "singleQuote": true,
     "trailingComma": "es5"
-  },
-  "jest": {
-    "setupFilesAfterEnv": [
-      "<rootDir>/jest/custom-matchers.js"
-    ],
-    "transform": {
-      "^.+\\.(t|j)sx?$": "@swc/jest"
-    },
-    "moduleNameMapper": {
-      "^~/(.*)": "<rootDir>/$1"
-    }
   },
   "files": [
     "dist"
@@ -64,14 +49,8 @@
     "tailwindcss": ">=3.2.0"
   },
   "devDependencies": {
-    "@swc/cli": "0.4.1-nightly.20240914",
-    "@swc/core": "^1.7.39",
-    "@swc/jest": "^0.2.36",
-    "@types/jest": "^29.5.14",
-    "jest": "^29.7.0",
-    "postcss": "^8.4.47",
     "prettier": "^3.3.3",
-    "tailwindcss": "3.4.14",
+    "tsup": "^8.3.0",
     "typescript": "^5.6.3"
   }
 }
